Update seating assignments

--- a/seats/index.html
+++ b/seats/index.html
@@ -13,66 +13,66 @@
     <li>
       <span class='header'>Table 1</span>
       <ul>
-        <li><span>Nate Griebel</span></li>
-        <li><span>Travis Iverson</span></li>
+        <li><span>Mike Malison</span></li>
+        <li><span>Matt Ziegler</span></li>
         <li><span>Landon Iverson</span></li>
         <li><span>Jaylin Iverson</span></li>
-        <li><span>Mike Malison</span></li>
-        <li><span>Anna Malison</span></li>
+        <li><span>Travis Iverson</span></li>
         <li><span>Tammy Tauger</span></li>
-        <li><span>Matt Ziegler</span></li>
+        <li><span>Nate Griebel</span></li>
+        <li><span>Anna Malison</span></li>
       </ul>
     </li>
     <li>
       <span class='header'>Table 2</span>
       <ul>
-        <li><span>Lain Barclay</span></li>
-        <li><span>Ben Davidson</span></li>
-        <li><span>John Gearheart</span></li>
-        <li><span>Lindsay Martin</span></li>
-        <li><span>Kelsey McLimans</span></li>
-        <li><span>Allan Muzilla</span></li>
         <li><span>Brian Smith</span></li>
         <li><span>Cole  Zwiefelhofer</span></li>
+        <li><span>Lain Barclay</span></li>
+        <li><span>Ben Davidson</span></li>
+        <li><span>Kelsey McLimans</span></li>
+        <li><span>Lindsay Martin</span></li>
+        <li><span>John Gearheart</span></li>
+        <li><span>Allan Muzilla</span></li>
       </ul>
     </li>
     <li>
       <span class='header'>Table 3</span>
       <ul>
-        <li><span>Aaron Gary</span></li>
-        <li><span>Marion Kranzfelder</span></li>
+        <li><span>Arlene Zwiefelhofer</span></li>
+        <li><span>Deb Zwiefelhofer</span></li>
         <li><span>David Nashold</span></li>
         <li><span>Raymond Nashold</span></li>
+        <li><span>Marion Kranzfelder</span></li>
         <li><span>Jennifer Nashold</span></li>
+        <li><span>Aaron Gary</span></li>
         <li><span>James Tannler</span></li>
-        <li><span>Deb Zwiefelhofer</span></li>
-        <li><span>Arlene Zwiefelhofer</span></li>
       </ul>
     </li>
     <li>
       <span class='header'>Table 4</span>
       <ul>
-        <li><span>Randy Jensen</span></li>
+        <li><span>Meredith Barclay</span></li>
         <li><span>Christine Jensen</span></li>
-        <li><span>Dawson Jensen</span></li>
-        <li><span>Gatlin Joles</span></li>
-        <li><span>Lee Reimann</span></li>
-        <li><span>Chris Reimann</span></li>
+        <li><span>Randy Jensen</span></li>
         <li><span>Art Zwiefelhofer</span></li>
         <li><span>Anita Zwiefelhofer</span></li>
+        <li><span>Chris Reimann</span></li>
+        <li><span>Lee Reimann</span></li>
+        <li><span>Albie Barclay</span></li>
       </ul>
     </li>
     <li>
       <span class='header'>Table 5</span>
       <ul>
-        <li><span>Albie Barclay</span></li>
-        <li><span>Meredith Barclay</span></li>
-        <li><span>Carter Barclay</span></li>
-        <li><span>Robert Barclay</span></li>
-        <li><span>Ace Barlcay</span></li>
-        <li><span>Rosalie King</span></li>
-        <li><span>David King</span></li>
         <li><span>Beth Livingston</span></li>
+        <li><span>Ace Barclay</span></li>
+        <li><span>Robert Barclay</span></li>
+        <li><span>David Kuhn</span></li>
+        <li><span>Rosalie King</span></li>
+        <li><span>Gatlin Joles</span></li>
+        <li><span>Dawson Jensen</span></li>
+        <li><span>Carter Barclay</span></li>
       </ul>
     </li>
     <li>
@@ -80,99 +80,99 @@
       <ul>
         <li><span>Linda Odness</span></li>
         <li><span>Jim Odness</span></li>
-        <li><span>Mark Rushmann</span></li>
         <li><span>Rachel Rushmann</span></li>
-        <li><span>Ashleigh Voigtschild</span></li>
+        <li><span>Mark Rushmann</span></li>
         <li><span>Aaron Voigtschild</span></li>
         <li><span>Conor Voigtschild</span></li>
         <li><span>Logan Voigtschild</span></li>
+        <li><span>Ashleigh Voigtschild</span></li>
       </ul>
     </li>
     <li>
       <span class='header'>Table 7</span>
       <ul>
-        <li><span>Dave Baier</span></li>
-        <li><span>Diane Baier</span></li>
-        <li><span>Michelle Hahn</span></li>
         <li><span>Emily Hahn</span></li>
-        <li><span>Tony Kogut</span></li>
+        <li><span>Michelle Hahn</span></li>
+        <li><span>Jeff Zwiefelhofer</span></li>
         <li><span>John Yeager</span></li>
         <li><span>Nancy Yeager</span></li>
-        <li><span>Jeff Zwiefelhofer</span></li>
+        <li><span>Tony Kogut</span></li>
+        <li><span>Dave Baier</span></li>
+        <li><span>Diane Baier</span></li>
       </ul>
     </li>
     <li>
       <span class='header'>Table 8</span>
       <ul>
-        <li><span>Jack Koppa</span></li>
-        <li><span>Kathy Kranzfelder</span></li>
         <li><span>Paula Kranzfelder Gumpher</span></li>
-        <li><span>Denise McKay</span></li>
-        <li><span>Sean Nashold</span></li>
+        <li><span>Kathy Kranzfelder</span></li>
+        <li><span>Hailey Sayegh</span></li>
+        <li><span>Jack Koppa</span></li>
         <li><span>Kieran Nashold</span></li>
         <li><span>Declan Nashold</span></li>
-        <li><span>Hailey Sayegh</span></li>
+        <li><span>Denise 	McKay</span></li>
+        <li><span>Sean Nashold</span></li>
       </ul>
     </li>
     <li>
       <span class='header'>Table 9</span>
       <ul>
-        <li><span>Mary Condon</span></li>
-        <li><span>Terrell Hyde</span></li>
         <li><span>Steve Nashold</span></li>
-        <li><span>Brendan Nashold</span></li>
         <li><span>Paul Schlumberger</span></li>
         <li><span>Shelley Schlumberger</span></li>
-        <li><span>Peter VanBeek</span></li>
         <li><span>Marjorie VanBeek</span></li>
+        <li><span>Peter VanBeek</span></li>
+        <li><span>Brendan Nashold</span></li>
+        <li><span>Terrell Hyde</span></li>
+        <li><span>Mary Condon</span></li>
       </ul>
     </li>
     <li>
       <span class='header'>Table 10</span>
       <ul>
         <li><span>Elizabeth Connors</span></li>
-        <li><span>Katherine King</span></li>
+        <li><span>Laurence Ward</span></li>
         <li><span>Gerard Kuhn</span></li>
-        <li><span>Madeleine Kuhn</span></li>
+        <li><span>Katherine King</span></li>
+        <li><span>Maddie Kuhn</span></li>
         <li><span>Ramanathan  Meyyappan</span></li>
         <li><span>Dave Reimann</span></li>
         <li><span>Nancy Reimann</span></li>
-        <li><span>Laurence Ward</span></li>
       </ul>
     </li>
     <li>
       <span class='header'>Table 11</span>
       <ul>
-        <li><span>Larry Hable</span></li>
-        <li><span>Barb Hable</span></li>
-        <li><span>Betty Hable</span></li>
         <li><span>Paul Hable</span></li>
         <li><span>Carol Hable</span></li>
+        <li><span>Betty Hable</span></li>
         <li><span>Nancy Naas</span></li>
+        <li><span>Barb Hable</span></li>
+        <li><span>Larry Hable</span></li>
       </ul>
     </li>
     <li>
       <span class='header'>Table 12</span>
       <ul>
-        <li><span>Darrel Allen</span></li>
-        <li><span>Lea Board</span></li>
-        <li><span>Eric Colwell</span></li>
         <li><span>Braulio Mauricio</span></li>
-        <li><span>Troy Meikle</span></li>
-        <li><span>Michaela Miller</span></li>
-        <li><span>Samm Sweitzer</span></li>
+        <li><span>Darrel Allen</span></li>
         <li><span>Daisy Wedel</span></li>
+        <li><span>Eric Colwell</span></li>
+        <li><span>Troy Meikle</span></li>
+        <li><span>Samm Sweitzer</span></li>
+        <li><span>Lea Board</span></li>
+        <li><span>Michaela Miller</span></li>
       </ul>
     </li>
     <li>
       <span class='header'>Table 13</span>
       <ul>
-        <li><span>Leila Chatti</span></li>
-        <li><span>Monica Cooley</span></li>
-        <li><span>Elizabeth Garrett</span></li>
-        <li><span>Adam Kachelski</span></li>
         <li><span>Ryley Karl</span></li>
         <li><span>Henrick Mader</span></li>
+        <li><span>Leila Chatti</span></li>
+        <li><span>Elizabeth Garrett</span></li>
+        <li><span>Adam Kachelski</span></li>
+        <li><span>Monica Cooley</span></li>
         <li><span>Hannah Mickelson</span></li>
         <li><span>Morgan Weber</span></li>
       </ul>
@@ -180,103 +180,102 @@
     <li>
       <span class='header'>Table 14</span>
       <ul>
-        <li><span>Mary McIquham</span></li>
-        <li><span>Tom  McIquham</span></li>
-        <li><span>Jane  Slupe</span></li>
-        <li><span>Tom  Slupe</span></li>
-        <li><span>Sheri Vandehaar</span></li>
-        <li><span>Kent Vandehaar</span></li>
-        <li><span>Sam Vandehaar</span></li>
+        <li><span>Maureen Ouellette</span></li>
+        <li><span>Eileen Duggan Saracino</span></li>
+        <li><span>Shelia Lanz</span></li>
+        <li><span>Keri Daniels</span></li>
+        <li><span>Robert Reimann</span></li>
+        <li><span>Kevin Duggan</span></li>
+        <li><span>Patrick Duggan</span></li>
+        <li><span>Kathy Becker</span></li>
       </ul>
     </li>
     <li>
       <span class='header'>Table 16</span>
       <ul>
         <li><span>Torree Breen</span></li>
-        <li><span>Scott Breen</span></li>
         <li><span>Rebecca Klinger</span></li>
+        <li><span>Amy Stephenson</span></li>
+        <li><span>Mike Stephenson</span></li>
         <li><span>Janet Muller-Rossetti</span></li>
         <li><span>Joe Rossetti</span></li>
-        <li><span>Mike Stephenson</span></li>
-        <li><span>Amy Stephenson</span></li>
+        <li><span>Scott Breen</span></li>
       </ul>
     </li>
     <li>
       <span class='header'>Table 17</span>
       <ul>
-        <li><span>Kathy Becker</span></li>
-        <li><span>Kerri Daniels</span></li>
-        <li><span>Kevin Duggan</span></li>
-        <li><span>Patrick Duggan</span></li>
-        <li><span>Eileen Duggan Saracino</span></li>
-        <li><span>Shelia Lanz</span></li>
-        <li><span>Maureen Ouellette</span></li>
-        <li><span>Robert Reimann</span></li>
+        <li><span>Kent Vandehaar</span></li>
+        <li><span>Sheri Vandehaar</span></li>
+        <li><span>Jane Slupe</span></li>
+        <li><span>Tom  Slupe</span></li>
+        <li><span>Tom  McIquham</span></li>
+        <li><span>Mary McIquham</span></li>
       </ul>
     </li>
     <li>
       <span class='header'>Table 18</span>
       <ul>
-        <li><span>Mary Addison</span></li>
-        <li><span>David Glenz</span></li>
-        <li><span>Sam Glenz</span></li>
-        <li><span>Evan Glenz</span></li>
-        <li><span>Peter Kakela</span></li>
-        <li><span>Pat Kastad</span></li>
         <li><span>Julie Kastad</span></li>
+        <li><span>Evan Glenz</span></li>
         <li><span>Karen Kastad-Glenz</span></li>
+        <li><span>Sam Glenz</span></li>
+        <li><span>David Glenz</span></li>
+        <li><span>Peter Kakela</span></li>
+        <li><span>Mary Addison</span></li>
+        <li><span>Pat Kastad</span></li>
       </ul>
     </li>
     <li>
       <span class='header'>Table 19</span>
       <ul>
-        <li><span>Rita Sobotta</span></li>
-        <li><span>David Sobotta</span></li>
-        <li><span>Trisha Sobotta Splinter</span></li>
-        <li><span>Jeremy Splinter</span></li>
-        <li><span>Ava Splinter</span></li>
-        <li><span>Ella Splinter</span></li>
         <li><span>Katie Stephens</span></li>
         <li><span>Kyle Stephens</span></li>
+        <li><span>Trisha Sobotta Splinter</span></li>
+        <li><span>Ava Splinter</span></li>
+        <li><span>Ella Splinter</span></li>
+        <li><span>Jeremy Splinter</span></li>
+        <li><span>David Sobotta</span></li>
+        <li><span>Rita Sobotta</span></li>
       </ul>
     </li>
     <li>
       <span class='header'>Table 20</span>
       <ul>
-        <li><span>Julian Gary</span></li>
-        <li><span>Genevieve Nashold</span></li>
-        <li><span>Langston Nashold</span></li>
-        <li><span>Greta Nashold</span></li>
         <li><span>Helena Nashold</span></li>
-        <li><span>Julia Nashold</span></li>
         <li><span>Georgia Nashold</span></li>
         <li><span>Rosabelle VanBeek</span></li>
+        <li><span>Julian Gary</span></li>
+        <li><span>Langston Nashold</span></li>
+        <li><span>Genevieve Nashold</span></li>
+        <li><span>Julia Nashold</span></li>
+        <li><span>Greta VanBeek</span></li>
       </ul>
     </li>
     <li>
       <span class='header'>Table 21</span>
       <ul>
-        <li><span>John Gutiérrez</span></li>
-        <li><span>Steve Miller</span></li>
-        <li><span>Faye Nashold</span></li>
         <li><span>Karen Nashold</span></li>
-        <li><span>Lisa Nashold</span></li>
+        <li><span>Faye Nashold</span></li>
+        <li><span>Steve Miller</span></li>
         <li><span>Kevin Nashold</span></li>
         <li><span>Kim Reid</span></li>
         <li><span>Don Wegner</span></li>
+        <li><span>Lisa Nashhold</span></li>
+        <li><span>John Gutiérrez</span></li>
       </ul>
     </li>
     <li>
       <span class='header'>Table 22</span>
       <ul>
-        <li><span>Jordan Cook</span></li>
-        <li><span>Ashlynn Mendoza-Schumann</span></li>
-        <li><span>Lori  Schumann</span></li>
-        <li><span>Tim Schumann</span></li>
-        <li><span>Alex Schumann</span></li>
-        <li><span>Danielle Schumann</span></li>
         <li><span>Rachel Schumann</span></li>
+        <li><span>Danielle Schumann</span></li>
+        <li><span>Alex Schumann</span></li>
+        <li><span>Lori 	Schumann</span></li>
+        <li><span>Tim Schumann</span></li>
+        <li><span>Jordan Cook</span></li>
         <li><span>Kamryn Schumann</span></li>
+        <li><span>Ashlynn Mendoza-Schumann</span></li>
       </ul>
     </li>
   </ul>
