Update seating chart

--- a/seats/index.html
+++ b/seats/index.html
@@ -1,5 +1,5 @@
 ---
-  layout: dynamic-list
+layout: dynamic-list
 ---
 
 <form class='row' style='margin-top: 10px;' method='POST' onsubmit='false;'>
@@ -13,269 +13,268 @@
     <li>
       <span class='header'>Table 1</span>
       <ul>
-        <li><span>Mike Malison</span></li>
-        <li><span>Matt Ziegler</span></li>
-        <li><span>Landon Iverson</span></li>
-        <li><span>Jaylin Iverson</span></li>
-        <li><span>Travis Iverson</span></li>
-        <li><span>Tammy Tauger</span></li>
-        <li><span>Nate Griebel</span></li>
-        <li><span>Anna Malison</span></li>
+        <li>Torree Breen</li>
+        <li>Scott Breen</li>
+        <li>Rebecca Klinger</li>
+        <li>Janet Muller-Rossetti</li>
+        <li>Joe Rossetti</li>
+        <li>Mike Stephenson</li>
+        <li>Amy Stephenson</li>
       </ul>
     </li>
     <li>
       <span class='header'>Table 2</span>
       <ul>
-        <li><span>Brian Smith</span></li>
-        <li><span>Cole  Zwiefelhofer</span></li>
-        <li><span>Lain Barclay</span></li>
-        <li><span>Ben Davidson</span></li>
-        <li><span>Kelsey McLimans</span></li>
-        <li><span>Lindsay Martin</span></li>
-        <li><span>John Gearheart</span></li>
-        <li><span>Allan Muzilla</span></li>
+        <li>Nate Griebel</li>
+        <li>Travis Iverson</li>
+        <li>Landon Iverson</li>
+        <li>Jaylin Iverson</li>
+        <li>Mike Malison</li>
+        <li>Anna Malison</li>
+        <li>Tammy Tauger</li>
+        <li>Matt Ziegler</li>
       </ul>
     </li>
     <li>
       <span class='header'>Table 3</span>
       <ul>
-        <li><span>Arlene Zwiefelhofer</span></li>
-        <li><span>Deb Zwiefelhofer</span></li>
-        <li><span>David Nashold</span></li>
-        <li><span>Raymond Nashold</span></li>
-        <li><span>Marion Kranzfelder</span></li>
-        <li><span>Jennifer Nashold</span></li>
-        <li><span>Aaron Gary</span></li>
-        <li><span>James Tannler</span></li>
+        <li>Lain Barclay</li>
+        <li>Ben Davidson</li>
+        <li>John Gearheart</li>
+        <li>Lindsay Martin</li>
+        <li>Kelsey McLimans</li>
+        <li>Allan Muzilla</li>
+        <li>Brian Smith</li>
+        <li>Cole Zwiefelhofer</li>
       </ul>
     </li>
     <li>
       <span class='header'>Table 4</span>
       <ul>
-        <li><span>Meredith Barclay</span></li>
-        <li><span>Christine Jensen</span></li>
-        <li><span>Randy Jensen</span></li>
-        <li><span>Art Zwiefelhofer</span></li>
-        <li><span>Anita Zwiefelhofer</span></li>
-        <li><span>Chris Reimann</span></li>
-        <li><span>Lee Reimann</span></li>
-        <li><span>Albie Barclay</span></li>
+        <li>Aaron Gary</li>
+        <li>Marion Kranzfelder</li>
+        <li>David Nashold</li>
+        <li>Raymond Nashold</li>
+        <li>Jennifer Nashold</li>
+        <li>James Tannler </li>
+        <li>Deb Zwiefelhofer</li>
+        <li>Arlene Zwiefelhofer</li>
       </ul>
     </li>
     <li>
       <span class='header'>Table 5</span>
       <ul>
-        <li><span>Beth Livingston</span></li>
-        <li><span>Ace Barclay</span></li>
-        <li><span>Robert Barclay</span></li>
-        <li><span>David Kuhn</span></li>
-        <li><span>Rosalie King</span></li>
-        <li><span>Gatlin Joles</span></li>
-        <li><span>Dawson Jensen</span></li>
-        <li><span>Carter Barclay</span></li>
+        <li>Randy Jensen</li>
+        <li>Christine Jensen</li>
+        <li>Lee Reimann</li>
+        <li>Chris Reimann</li>
+        <li>Art Zwiefelhofer</li>
+        <li>Anita Zwiefelhofer</li>
+        <li>Albie Barclay</li>
+        <li>Meredith Barclay</li>
       </ul>
     </li>
     <li>
       <span class='header'>Table 6</span>
       <ul>
-        <li><span>Linda Odness</span></li>
-        <li><span>Jim Odness</span></li>
-        <li><span>Rachel Rushmann</span></li>
-        <li><span>Mark Rushmann</span></li>
-        <li><span>Aaron Voigtschild</span></li>
-        <li><span>Conor Voigtschild</span></li>
-        <li><span>Logan Voigtschild</span></li>
-        <li><span>Ashleigh Voigtschild</span></li>
+        <li>Dawson Jensen</li>
+        <li>Gatlin Joles</li>
+        <li>Carter Barclay</li>
+        <li>Robert Barclay</li>
+        <li>Ace Barclay</li>
+        <li>Rosalie King</li>
+        <li>David King</li>
+        <li>Beth Livingston</li>
       </ul>
     </li>
     <li>
       <span class='header'>Table 7</span>
       <ul>
-        <li><span>Emily Hahn</span></li>
-        <li><span>Michelle Hahn</span></li>
-        <li><span>Jeff Zwiefelhofer</span></li>
-        <li><span>John Yeager</span></li>
-        <li><span>Nancy Yeager</span></li>
-        <li><span>Tony Kogut</span></li>
-        <li><span>Dave Baier</span></li>
-        <li><span>Diane Baier</span></li>
+        <li>Linda Odness</li>
+        <li>Jim Odness</li>
+        <li>Mark Rushmann</li>
+        <li>Rachel Rushmann</li>
+        <li>Ashleigh Voigtschild</li>
+        <li>Aaron Voigtschild</li>
+        <li>Conor Voigtschild</li>
+        <li>Logan Voigtschild</li>
       </ul>
     </li>
     <li>
       <span class='header'>Table 8</span>
       <ul>
-        <li><span>Paula Kranzfelder Gumpher</span></li>
-        <li><span>Kathy Kranzfelder</span></li>
-        <li><span>Hailey Sayegh</span></li>
-        <li><span>Jack Koppa</span></li>
-        <li><span>Kieran Nashold</span></li>
-        <li><span>Declan Nashold</span></li>
-        <li><span>Denise 	McKay</span></li>
-        <li><span>Sean Nashold</span></li>
+        <li>Dave Baier</li>
+        <li>Diane Baier</li>
+        <li>Michelle Hahn</li>
+        <li>Emily Hahn</li>
+        <li>Tony Kogut</li>
+        <li>John Yeager</li>
+        <li>Nancy Yeager</li>
+        <li>Jeff Zwiefelhofer</li>
       </ul>
     </li>
     <li>
       <span class='header'>Table 9</span>
       <ul>
-        <li><span>Steve Nashold</span></li>
-        <li><span>Paul Schlumberger</span></li>
-        <li><span>Shelley Schlumberger</span></li>
-        <li><span>Marjorie VanBeek</span></li>
-        <li><span>Peter VanBeek</span></li>
-        <li><span>Brendan Nashold</span></li>
-        <li><span>Terrell Hyde</span></li>
-        <li><span>Mary Condon</span></li>
+        <li>Jack Koppa</li>
+        <li>Kathy Kranzfelder</li>
+        <li>Paula Kranzfelder Gumpher</li>
+        <li>Denise McKay</li>
+        <li>Sean Nashold</li>
+        <li>Kieran Nashold</li>
+        <li>Declan Nashold</li>
+        <li>Hailey Sayegh</li>
       </ul>
     </li>
     <li>
       <span class='header'>Table 10</span>
       <ul>
-        <li><span>Elizabeth Connors</span></li>
-        <li><span>Laurence Ward</span></li>
-        <li><span>Gerard Kuhn</span></li>
-        <li><span>Katherine King</span></li>
-        <li><span>Maddie Kuhn</span></li>
-        <li><span>Ramanathan  Meyyappan</span></li>
-        <li><span>Dave Reimann</span></li>
-        <li><span>Nancy Reimann</span></li>
+        <li>Elizabeth Connors</li>
+        <li>Katherine King</li>
+        <li>Gerard Kuhn</li>
+        <li>Maddie Kuhn</li>
+        <li>Ramanathan Meyyappan</li>
+        <li>Dave Reimann</li>
+        <li>Nancy Reimann</li>
+        <li>Laurence Ward</li>
       </ul>
     </li>
     <li>
       <span class='header'>Table 11</span>
       <ul>
-        <li><span>Paul Hable</span></li>
-        <li><span>Carol Hable</span></li>
-        <li><span>Betty Hable</span></li>
-        <li><span>Nancy Naas</span></li>
-        <li><span>Barb Hable</span></li>
-        <li><span>Larry Hable</span></li>
+        <li>Mary Condon</li>
+        <li>Terrell Hyde</li>
+        <li>Steve Nashold</li>
+        <li>Brendan Nashold</li>
+        <li>Paul Schlumberger</li>
+        <li>Shelley Schlumberger</li>
+        <li>Peter VanBeek</li>
+        <li>Marjorie VanBeek</li>
       </ul>
     </li>
     <li>
       <span class='header'>Table 12</span>
       <ul>
-        <li><span>Braulio Mauricio</span></li>
-        <li><span>Darrel Allen</span></li>
-        <li><span>Daisy Wedel</span></li>
-        <li><span>Eric Colwell</span></li>
-        <li><span>Troy Meikle</span></li>
-        <li><span>Samm Sweitzer</span></li>
-        <li><span>Lea Board</span></li>
-        <li><span>Michaela Miller</span></li>
+        <li>Larry Hable</li>
+        <li>Barb Hable</li>
+        <li>Betty Hable</li>
+        <li>Paul Hable</li>
+        <li>Carol Hable</li>
+        <li>Nancy Naas</li>
       </ul>
     </li>
     <li>
       <span class='header'>Table 13</span>
       <ul>
-        <li><span>Ryley Karl</span></li>
-        <li><span>Henrick Mader</span></li>
-        <li><span>Leila Chatti</span></li>
-        <li><span>Elizabeth Garrett</span></li>
-        <li><span>Adam Kachelski</span></li>
-        <li><span>Monica Cooley</span></li>
-        <li><span>Hannah Mickelson</span></li>
-        <li><span>Morgan Weber</span></li>
+        <li>Darrel Allen</li>
+        <li>Lea Board</li>
+        <li>Eric Colwell</li>
+        <li>Braulio Mauricio</li>
+        <li>Troy Meikle</li>
+        <li>Michaela Miller</li>
+        <li>Samm Sweitzer</li>
+        <li>Daisy Wedel</li>
       </ul>
     </li>
     <li>
       <span class='header'>Table 14</span>
       <ul>
-        <li><span>Maureen Ouellette</span></li>
-        <li><span>Eileen Duggan Saracino</span></li>
-        <li><span>Shelia Lanz</span></li>
-        <li><span>Keri Daniels</span></li>
-        <li><span>Robert Reimann</span></li>
-        <li><span>Kevin Duggan</span></li>
-        <li><span>Patrick Duggan</span></li>
-        <li><span>Kathy Becker</span></li>
+        <li>Leila Chatti</li>
+        <li>Monica Cooley</li>
+        <li>Elizabeth Garrett</li>
+        <li>Adam Kachelski</li>
+        <li>Ryley Karl</li>
+        <li>Henrick Mader</li>
+        <li>Hannah Mickelson</li>
+        <li>Morgan Weber</li>
       </ul>
     </li>
     <li>
-      <span class='header'>Table 16</span>
+      <span class='header'>Table 15</span>
       <ul>
-        <li><span>Torree Breen</span></li>
-        <li><span>Rebecca Klinger</span></li>
-        <li><span>Amy Stephenson</span></li>
-        <li><span>Mike Stephenson</span></li>
-        <li><span>Janet Muller-Rossetti</span></li>
-        <li><span>Joe Rossetti</span></li>
-        <li><span>Scott Breen</span></li>
+        <li>Kathy Becker</li>
+        <li>Kerri Daniels</li>
+        <li>Kevin Duggan</li>
+        <li>Patrick Duggan</li>
+        <li>Eileen Duggan Saracino</li>
+        <li>Shelia Lanz</li>
+        <li>Maureen Ouellette</li>
+        <li>Robert Reimann</li>
       </ul>
     </li>
     <li>
       <span class='header'>Table 17</span>
       <ul>
-        <li><span>Kent Vandehaar</span></li>
-        <li><span>Sheri Vandehaar</span></li>
-        <li><span>Jane Slupe</span></li>
-        <li><span>Tom  Slupe</span></li>
-        <li><span>Tom  McIquham</span></li>
-        <li><span>Mary McIquham</span></li>
+        <li>Mary Addison</li>
+        <li>David Glenz</li>
+        <li>Sam Glenz</li>
+        <li>Evan Glenz</li>
+        <li>Peter Kakela</li>
+        <li>Pat Kastad</li>
+        <li>Julie Kastad</li>
+        <li>Karen Kastad-Glenz</li>
       </ul>
     </li>
     <li>
       <span class='header'>Table 18</span>
       <ul>
-        <li><span>Julie Kastad</span></li>
-        <li><span>Evan Glenz</span></li>
-        <li><span>Karen Kastad-Glenz</span></li>
-        <li><span>Sam Glenz</span></li>
-        <li><span>David Glenz</span></li>
-        <li><span>Peter Kakela</span></li>
-        <li><span>Mary Addison</span></li>
-        <li><span>Pat Kastad</span></li>
+        <li>Rita Sobotta</li>
+        <li>David Sobotta</li>
+        <li>Trisha Sobotta Splinter</li>
+        <li>Jeremy Splinter</li>
+        <li>Ava Splinter</li>
+        <li>Ella Splinter</li>
+        <li>Katie Stephens</li>
+        <li>Kyle Stephens</li>
       </ul>
     </li>
     <li>
       <span class='header'>Table 19</span>
       <ul>
-        <li><span>Katie Stephens</span></li>
-        <li><span>Kyle Stephens</span></li>
-        <li><span>Trisha Sobotta Splinter</span></li>
-        <li><span>Ava Splinter</span></li>
-        <li><span>Ella Splinter</span></li>
-        <li><span>Jeremy Splinter</span></li>
-        <li><span>David Sobotta</span></li>
-        <li><span>Rita Sobotta</span></li>
+        <li>Mary McIlquham</li>
+        <li>Tom McIlquham</li>
+        <li>Jane Slupe</li>
+        <li>Tom Slupe</li>
+        <li>Sheri Vandehaar</li>
       </ul>
     </li>
     <li>
       <span class='header'>Table 20</span>
       <ul>
-        <li><span>Helena Nashold</span></li>
-        <li><span>Georgia Nashold</span></li>
-        <li><span>Rosabelle VanBeek</span></li>
-        <li><span>Julian Gary</span></li>
-        <li><span>Langston Nashold</span></li>
-        <li><span>Genevieve Nashold</span></li>
-        <li><span>Julia Nashold</span></li>
-        <li><span>Greta VanBeek</span></li>
+        <li>Julian Gary</li>
+        <li>Genevieve Nashold</li>
+        <li>Langston Nashold</li>
+        <li>Greta Nashold</li>
+        <li>Helena Nashold</li>
+        <li>Julia Nashold</li>
+        <li>Georgia Nashold</li>
+        <li>Rosabelle VanBeek</li>
       </ul>
     </li>
     <li>
       <span class='header'>Table 21</span>
       <ul>
-        <li><span>Karen Nashold</span></li>
-        <li><span>Faye Nashold</span></li>
-        <li><span>Steve Miller</span></li>
-        <li><span>Kevin Nashold</span></li>
-        <li><span>Kim Reid</span></li>
-        <li><span>Don Wegner</span></li>
-        <li><span>Lisa Nashhold</span></li>
-        <li><span>John Gutiérrez</span></li>
+        <li>John Gutiérrez</li>
+        <li>Steve Miller</li>
+        <li>Faye Nashold</li>
+        <li>Karen Nashold</li>
+        <li>Lisa Nashold</li>
+        <li>Kevin Nashold</li>
+        <li>Kim Reid</li>
+        <li>Don Wegner</li>
       </ul>
     </li>
     <li>
       <span class='header'>Table 22</span>
       <ul>
-        <li><span>Rachel Schumann</span></li>
-        <li><span>Danielle Schumann</span></li>
-        <li><span>Alex Schumann</span></li>
-        <li><span>Lori 	Schumann</span></li>
-        <li><span>Tim Schumann</span></li>
-        <li><span>Jordan Cook</span></li>
-        <li><span>Kamryn Schumann</span></li>
-        <li><span>Ashlynn Mendoza-Schumann</span></li>
+        <li>Jordan Cook</li>
+        <li>Ashlynn Mendoza-Schumann</li>
+        <li>Lori Schumann</li>
+        <li>Tim Schumann</li>
+        <li>Alex Schumann</li>
+        <li>Danielle Schumann</li>
+        <li>Rachel Schumann</li>
+        <li>Kamryn Schumann</li>
       </ul>
     </li>
   </ul>
@@ -286,7 +285,7 @@
   var seatingList = document.querySelector('#chart').children[0];
 
   searchInput.onkeyup = function(e) {
-    var val = e.target.value.toLowerCase();
+    var val = e.target.value.toLowerCase().trim();
     for (var i = 0; i < seatingList.children.length; i++) {
       var found = false;
       var people = seatingList.children[i].children[1];
@@ -294,14 +293,15 @@
       for (var j = 0; j < people.children.length; j++) {
         var person = people.children[j];
         console.log(person);
-        if (person.innerHTML.toLowerCase().search(val) === -1) {
-          person.style.display = 'none';
+        if (!val || person.innerHTML.toLowerCase().search(val) === -1) {
+          person.style['font-weight'] = '';
         } else {
           found = true;
-          person.style.display = 'list-item';
+          person.style['font-weight'] = 'bold';
         }
       }
-      seatingList.children[i].style.display = found ? 'list-item' : 'none';
+      seatingList.children[i].style.display = (!val || found) ? 'list-item' : 'none';
     }
   };
+
 </script>
