Update OpenGraph metadata

--- a/seats/index.html
+++ b/seats/index.html
@@ -1,5 +1,10 @@
 ---
 layout: dynamic-list
+og:
+  title: Place assignments for the Jensen-Reimann wedding
+  type: website
+  url: http://ckjr.us/seats
+  image: http://ckjr.us/img/seats-og.png
 ---
 
 <form class='row' style='margin-top: 10px;' method='POST' onsubmit='false;'>
