Automatically calculate og:url and og:title

--- a/seats/index.html
+++ b/seats/index.html
@@ -1,10 +1,9 @@
 ---
 layout: dynamic-list
 og:
-  title: Place assignments for the Jensen-Reimann wedding
   type: website
-  url: http://ckjr.us/seats
   image: http://ckjr.us/img/seats-og.png
+  description: Place assignments for the Jensen-Reimann wedding
 ---
 
 <form class='row' style='margin-top: 10px;' method='POST' onsubmit='false;'>
