Update seating chart title

--- a/seats/index.html
+++ b/seats/index.html
@@ -1,9 +1,9 @@
 ---
 layout: dynamic-list
+title: Table Assignments - Jensen-Reimann Wedding
 og:
   type: website
   image: http://ckjr.us/img/seats-og.png
-  description: Place assignments for the Jensen-Reimann wedding
 ---
 
 <form class='row' style='margin-top: 10px;' method='POST' onsubmit='false;'>
